Skip to content

Subtitles not activated automatically over SMB network

(Duplicating and hiving off from vlc-android#744 (comment 38568) because of no response.)

Description

VLC doesn't automatically load and display subtitles (SRT file placed alongside the video file of same name) for videos played over SMB network.

No such problem with files stored locally.

App version

3.2.0-beta-3

App mode

Smartphone

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information