input: auto select all (perfectly) matched slaves

Historically, only local slaves or one added via the "input-slave" are
automatically selected. This commit adds autoselection for slaves found
by a network directory demuxer. To avoid false positives, only perfectly
matched slaves are auto-selected.

There is still a difference between local and network slaves:
 - Any matched local slaves will be auto-selected
 - Only perfectly matched network slaves will be auto-selected

Fixes #25673